--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,23 +1,29 @@
 body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
   font-size: 18px;
 }
 button {
-  padding: 16px;
+  padding: 5px 16px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 16px;
   background-color: black;
   color: white;
-  border-radius: 8px;
+  border-radius: 8px !important;
   cursor: pointer;
 }
+
+.submit{
+  margin-top: 50px;
+  display: block;
+}
+
 h3, h4 {
   margin-bottom: 0;
+  margin-top: 50px;
 }
 nav {
   border-bottom: 4px solid black;
   text-align: center;
-  position: fixed;
   top: 0;
   width: 100%;
   background: white;
@@ -45,7 +51,7 @@ nav a:hover {
 #page-body {
   max-width: 700px;
   margin: auto;
-  padding-top: 72px;
+  padding-top: 30px;
 }
 input, textarea {
   display: block;
@@ -74,7 +80,7 @@ input, textarea {
 }
 
 
-
+/* 
 #add-comment-form {
   border-bottom: 2px solid black;
   padding: 16px;
@@ -86,4 +92,14 @@ input, textarea {
 
 #add-comment-form button {
   width: 320px;
+} */
+
+.dropdown{
+  padding: 2px 8px 8px;
+  margin-left: -8px;
+  display: inline;
+}
+
+.account-text{
+  color: purple;
 }
